[package]
name = "pumpfun"
version = "3.0.2"
edition = "2021"
authors = ["Rapheal Bamidele <nhuxhr@gmail.com>"]
repository = "https://github.com/nhuxhr/pumpfun-rs"
description = "Rust SDK to interact with the Pump.fun Solana program."
license = "MIT OR Apache-2.0"
keywords = ["solana", "memecoins", "pumpfun", "cpi", "sdk"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = { version = "1.5.7", features = ["derive"] }
isahc = "1.7.2"
mpl-token-metadata = "5.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
tokio = "1.44.2"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.19.1"
tokio-test = "0.4.4"
